# scalar_quantization

./: .gitignore  .gitmodules  KMeans_quantization.ipynb  KMeans_quantization.py  KMedoids_quantization.ipynb  KMedoids_quantization.py  LICENSE.md  LloydMax_quantization.ipynb  LloydMax_quantization.py  LloydMax_quantizer.py  README.md  companded_quantization.ipynb  companded_quantization.py  companded_quantizer.py  deadzone_quantization.py  deadzone_quantizer.py  digital_quantization.ipynb  distortion.py  index.css  index.html  index.ipynb  index2.html  information.py  midrise_quantization.py  midrise_quantizer.py  midtread.ipynb  midtread_quantization.py  midtread_quantizer.py  pyproject.toml  quantization.ipynb  quantization.py  quantizer.py  texput.tex  uniform_quantization.ipynb
docs/: KMeans_quantization.ipynb  LloydMax_quantization.ipynb  SQ_comparison.ipynb  digital_quantization.ipynb  gray_SQ_LloydMax.ipynb  gray_SQ_deadzone.ipynb  gray_SQ_midrise.ipynb  index.html  non_uniform_SQ.ipynb  texput.tex
docs/HTML/: index.css  index.html  texput.tex
docs/graphics/: companded_quantization.ipynb  cuantif_max-lloyd.fig  deadzone.ipynb  midrise.ipynb  midtread.ipynb
docs/notebooks/: KMedoids_quantization.ipynb  common.py  digital_quantization.ipynb  runme.sh  scalar_quantization.ipynb
graphics/: Makefile  Q.fig  companded_quantization.ipynb  cuantif.fig  deadzone.ipynb  midrise.ipynb  midtread.ipynb
local/: Makefile  cuantif_max-lloyd.fig  lineal_quantization.fig
src/: test_LloydMax.py  test_deadzone.py
src/scalar_quantization/: KMeans_quantization.py  (+7 more)
(+3 files in other folders)
