[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scalar_quantization"
version = "0.0.1"
authors = [
  { name="Vicente González Ruiz", email="vicente.gonzalez.ruiz@gmail.com" },
]
description = "Scalar quantizers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vicente-gonzalez-ruiz/scalar_quantization"
"Bug Tracker" = "https://github.com/vicente-gonzalez-ruiz/scalar_quantization/issues"
